--- a/index.html
+++ b/index.html
@@ -131,10 +131,9 @@
           <a
             class="twitter-link"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            href="https://linkedin.com/in/valentin-marinov-79b92a13b"
+            >Valentin Marinov</a
+          >. Use for learning or your portfolio.
         </p>
       </div>
 
